# 2040UsbJoysticksReceiver

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
hack/: keycodes.txt  pinout.txt  rp2040openocd.cfg  wiring.txt
hack/cpp/xn297_arduino/: .gitignore  platformio.ini
hack/cpp/xn297_arduino/lib/xn297/: xn297.cpp  xn297.h
hack/cpp/xn297_arduino/src/: main.cpp
hack/spi_captures/: 3ch1.sal  3ch2.sal  README.md
hack/spi_captures/analyzer/: HighLevelAnalyzer.py  README.md  extension.json
slides/: Plan.md
src/: hid_descriptor.rs  led_wheel.rs  main.rs  rgb_wheel.rs  xn297.rs
usdb-joystic-hid-descriptor/: Cargo.toml
usdb-joystic-hid-descriptor/src/: lib.rs
