[package]
edition = "2021"
name = "p2040_xn297_receiver"
version = "0.0.1"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7" }

defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.8.0"

# BSP
waveshare-rp2040-zero = { features = ["default", "rp2040-e5"], version = "0.7.0" }
panic-halt = "0.2.0"

# USB
usb-device = "0.2.9"
usbd-hid = "0.7.0"
usbd-serial = "0.1.1"

# consider later if i'll need it
fugit = "0.3.7"
nb = "1.1.0"

# For build the example
# https://github.com/rp-rs/rp-hal-boards/blob/main/boards/waveshare-rp2040-zero/examples/waveshare_rp2040_zero_neopixel_rainbow.rs
smart-leds = "0.3" # 0.4 of this brings smart-leds-trait crate 0.3.0
                                   # which breaks compilation due to ws2812-pio depends on smart-leds-trait 0.2.1
ws2812-pio = "0.7.0"

[dependencies.rp2040-hal]
features = ["rp2040-e5"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[features]
rp2040-e5 = ["waveshare-rp2040-zero/rp2040-e5"]