[workspace]
members = ["usdb-joystic-hid-descriptor"]

[package]
edition = "2021"
name = "p2040_xn297_receiver"
version = "0.0.1"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7" }

defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.8.0"
fugit = "0.3.7"
nb = "1.1.0"
panic-halt = "0.2.0"
critical-section = "1.1.2"

# BSP
rp-pico = { features = ["default", "rp2040-e5"], version = "0.8.0" , optional = true}
waveshare-rp2040-zero = { features = ["default", "rp2040-e5"], version = "0.7.0" , optional = true}

# USB
usb-device = { version = "0.2.9", features = ["defmt"] }
usbd-hid = "0.6.1"
usdb-joystic-hid-descriptor = {path = "usdb-joystic-hid-descriptor"}


[features]
waveshare-rp2040-zero = ["dep:waveshare-rp2040-zero"]
rp-pico = ["dep:rp-pico"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
