[workspace]
members = ["usdb-joystic-hid-descriptor"]

[package]
edition = "2021"
name = "p2040_xn297_receiver"
version = "0.0.1"
license = "MIT"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7" }

defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.8.0"
fugit = "0.3.7"
nb = "1.1.0"
panic-halt = "0.2.0"
critical-section = "1.1.2"

# BSP
# rp-hal-boards depends on older usb-device version 0.2.9
# update and get rid of the fork when theese crates will be updated and move to usb-device >0.3.0
#rp-pico = { features = [], version = "0.8.0" , optional = true}
#waveshare-rp2040-zero = { features = [], version = "0.7.0" , optional = true}
rp-pico = { git = "https://github.com/lobziik/rp-hal-boards.git", rev = "f77c644", optional = true}

# USB
usb-device = { version = "0.3.1", features = ["defmt"] }
usbd-hid = "0.7.0"
usdb-joystic-hid-descriptor = {path = "usdb-joystic-hid-descriptor"}

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
